# Modular_Quiz_App_Tauri

Modular_Quiz_App_Tauri/modular_quiz_app/: package-lock.json  package.json
Modular_Quiz_App_Tauri/modular_quiz_app/src/: index.html  index.js  quiz.css  quiz.html  quiz.js  result.css  result.html  result.js
Modular_Quiz_App_Tauri/modular_quiz_app/src-tauri/: Cargo.toml  tauri.conf.json
Modular_Quiz_App_Tauri/modular_quiz_app/src-tauri/src/: appconfig.rs  github.rs  main.rs  quiz.rs
