[package]
name = "modular_quiz_app"
version = "0.0.1"
description = "A modular quiz app, designed to be able to load any type of quiz that matches the JSON structure of the quiz json files."
authors = ["Jesco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8.5"
tauri = { version = "1.5", features = [ "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
